# browserExtensions

./: LICENSE  README.md  main.ps1
boilerplate/: manifest.json  note.md  note_bt.md  test.py
boilerplate/background/: action.mjs  background.js  default.json
boilerplate/js/: gui_helper.mjs  helper.mjs
boilerplate/view/: content_func.mjs
boilerplate/view/content/: content.js  touch.js
boilerplate/view/controller/: context.js  favicon.js
boilerplate/view/popup/: bt.html  filepicker.js  popup.html  qr.js
chorme/: manifest.json
firefox/: background.js  content.js  manifest.json
server/: README.md  bt.csx  server.csx  server.ps1  server.py
server/server_rs/: Cargo.toml
server/server_rs/src/: main.rs  process.rs  root.rs
