[package]
name = "server_rs"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
axum = "*"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "*", features = ["codec"] }

http-body-util = "0.1.0"
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

futures-util = "*"
encoding = "*"
encoding_rs = "*"
encoding_rs_io = "*"