[package]
name = "server_rs"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --------server--------
tokio = { version = "1.0", features = ["full"] }
axum = "*"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
encoding_rs = "0.8.35"